# PicoBringup

./: CMakeLists.txt  main.c  pico_flash_uf2.cmake
examples/: blink_and_button.c  helloworld.c
i2c_peripheral/: README.md  i2c_peripheral.c  i2c_peripheral.h  ringbuf.c  ringbuf.h
